# django_task_manager

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  utils.py
.github/workflows/: lint_check.yml  run_tests.yml
fixtures/: labels.json  one_task.json  statuses.json  tasks.json  users.json
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_initial.py
labels/templates/labels/: label_delete.html  labels_show.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_status_author.py
statuses/templates/statuses/: statuses_show.html
task_manager/: forms.py  helpers.py  settings.py  tests.py  urls.py  views.py
task_manager/templates/: base.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py  0003_alter_task_author_alter_task_executor_and_more.py
tasks/templates/tasks/: index.html  task_delete.html  task_show.html  tasks_show.html
templates/: base.html  login.html
users/: forms.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: show_users.html  user_form.html  users_show.html
