[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ESergievich <sergievichevgeniy@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-bootstrap5 = "^24.2"
django-filter = "^24.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
rollbar = "^0.16.3"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task_manager = "manage.py:main"